KUDU-2721: support ranges in CPU lists

Generalise the logic to handle comma-separated ranges.

Testing:
Added unit test for parsing logic to test the various possible
permutations of CPU ranges.

Change-Id: I97311bfbcf70bea069e941b6e7f4f015fb781b3f
Reviewed-on: http://gerrit.cloudera.org:8080/12657
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins