src/kudu/gutil/sysinfo.cc
@@ -32,7 +32,7 @@
 # define PLATFORM_WINDOWS 1
 #endif
 
-
+#include <ctype.h>
 #include <fcntl.h>    // for open()
 #include <unistd.h>   // for read()
 
@@ -51,11 +51,13 @@
 
 #include "kudu/gutil/sysinfo.h"
 
+#include <algorithm>
 #include <cerrno>    // for errno
 #include <cstdio>    // for snprintf(), sscanf()
 #include <cstdlib>   // for getenv()
 #include <cstring>   // for memmove(), memchr(), etc.
 #include <ctime>
+#include <limits>
 #include <ostream>
 
 #include <glog/logging.h>
@@ -65,6 +67,8 @@
 #include "kudu/gutil/macros.h"
 #include "kudu/gutil/port.h"
 #include "kudu/gutil/walltime.h"
+
+using std::numeric_limits;
 
 // This isn't in the 'base' namespace in tcmallc. But, tcmalloc
 // exports these functions, so we need to namespace them to avoid
@@ -161,21 +165,60 @@ static bool ReadIntFromFile(const char *file, int *value) {
 
 static int ReadMaxCPUIndex() {
   char buf[1024];
+  // TODO(tarmstrong): KUDU-2730: 'present' doesn't include CPUs that could be hotplugged
+  // in the future. 'possible' does, but using it instead could result in a blow-up in the
+  // number of per-CPU data structures.
   CHECK(SlurpSmallTextFile("/sys/devices/system/cpu/present", buf, arraysize(buf)));
+  int max_idx = ParseMaxCpuIndex(buf);
+  CHECK_GE(max_idx, 0) << "unable to parse max CPU index from: " << buf;
+  return max_idx;
+}
 
-  // On a single-core machine, 'buf' will contain the string '0' with a newline.
-  if (strcmp(buf, "0\n") == 0) {
-    return 0;
+int ParseMaxCpuIndex(const char* str) {
+  DCHECK(str != nullptr);
+  const char* pos = str;
+  // Initialize max_idx to invalid so we can just return if we find zero ranges.
+  int max_idx = -1;
+
+  while (true) {
+    const char* range_start = pos;
+    const char* dash = nullptr;
+    // Scan forward until we find the separator indicating end of range, which is always a
+    // newline or comma if the input is valid.
+    for (; *pos != ',' && *pos != '\n'; pos++) {
+      // Check for early end of string - bail here to avoid advancing past end.
+      if (*pos == '\0') return -1;
+      if (*pos == '-') {
+        // Multiple dashes in range is invalid.
+        if (dash != nullptr) return -1;
+        dash = pos;
+      } else if (!isdigit(*pos)) {
+        return -1;
+      }
+    }
+
+    // At this point we found a range [range_start, pos) comprised of digits and an
+    // optional dash.
+    const char* num_start = dash == nullptr ? range_start : dash + 1;
+    // Check for ranges with missing numbers, e.g. "", "3-", "-3".
+    if (num_start == pos || dash == range_start) return -1;
+    // The numbers are comprised only of digits, so it can only fail if it is out of
+    // range of int (the return type of this function).
+    unsigned long start_idx = strtoul(range_start, nullptr, 10);
+    if (start_idx > numeric_limits<int>::max()) return -1;
+    unsigned long end_idx = strtoul(num_start, nullptr, 10);
+    if (end_idx > numeric_limits<int>::max() || start_idx > end_idx) {
+      return -1;
+    }
+    // Keep track of the max index we've seen so far.
+    max_idx = std::max(static_cast<int>(end_idx), max_idx);
+    // End of line, expect no more input.
+    if (*pos == '\n') break;
+    ++pos;
   }
-
-  // On multi-core, it will have a CPU range like '0-7'.
-  CHECK_EQ(0, memcmp(buf, "0-", 2)) << "bad list of possible CPUs: " << buf;
-
-  char* max_cpu_str = &buf[2];
-  char* err;
-  int val = strtol(max_cpu_str, &err, 10);
-  CHECK(*err == '\n' || *err == '\0') << "unable to parse max CPU index from: " << buf;
-  return val;
+  // String must have a single newline at the very end.
+  if (*pos != '\n' || *(pos + 1) != '\0') return -1;
+  return max_idx;
 }
 
 #endif
